--- a/eyemark_compliance/requirements.txt
+++ b/eyemark_compliance/requirements.txt
@@ -1,6 +1,26 @@
-flask
-python-dotenv
-pandas
-openpyxl
-requests
-apscheduler
+APScheduler==3.11.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+et_xmlfile==2.0.0
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+numpy==2.2.4
+openpyxl==3.1.5
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
+six==1.17.0
+SQLAlchemy==2.0.40
+typing_extensions==4.13.1
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.3.0
+Werkzeug==3.1.3
